<resources>
    <string name="app_name">ICareWeight</string>
    <string-array name="day">
        <item>Day 1</item>
        <item>Day 2</item>
        <item>Day 3</item>
        <item>Day 4</item>
        <item>Day 5</item>
        <item>Day 6</item>
        <item>Day 7</item>
        <item>Day 8</item>
        <item>Day 9</item>
        <item>Day 10</item>
        <item>Day 11</item>
        <item>Day 12</item>
        <item>Day 13</item>
        <item>Day 14</item>
        <item>Day 15</item>
        <item>Day 16</item>
        <item>Day 17</item>
        <item>Day 18</item>
        <item>Day 19</item>
        <item>Day 20</item>
        <item>Day 21</item>
        <item>Day 22</item>
        <item>Day 23</item>
        <item>Day 24</item>
        <item>Day 25</item>
        <item>Day 26</item>
        <item>Day 27</item>
        <item>Day 28</item>
        <item>Day 29</item>
        <item>Day 30</item>
    </string-array>
    <string name="icareweight">ICareWeight</string>
    <string name="settings">Settings</string>
    <string name="akun">Akun</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="akg">AKG</string>
    <string name="_18000_kal">18000 kal</string>
    <string name="prefensi">Prefensi</string>
    <string name="daerah">Daerah</string>
    <string name="indonesia">Indonesia</string>
    <string name="bahasa_sistem">Bahasa Sistem</string>
    <string name="pemberitahuan">Pemberitahuan</string>
    <string name="pengingat">Pengingat</string>
    <string name="keluar">Keluar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>