<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_settings"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:background="@drawable/frame1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:gravity="right"
                android:text="@string/icareweight"
                android:textColor="#FFFAFA"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/settings"
                android:textColor="#E9FAB0"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.881" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/akun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/akun"
                android:textColor="#0D3F41"
                android:textStyle="bold"
                android:textSize="13dp"
                android:layout_margin="5dp"/>
            <TextView
                android:id="@+id/pengaturanAkun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pengaturan_akun"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:layout_margin="5dp"/>
            <TextView
                android:id="@+id/akg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/akg"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:layout_margin="5dp"
                android:layout_marginBottom="0dp"/>
            <TextView
                android:id="@+id/descAKG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_18000_kal"
                android:textColor="#545454"
                android:textSize="10dp"
                android:layout_marginLeft="5dp"
                />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="?android:attr/listDivider"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/preferensi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefensi"
                android:textColor="#0D3F41"
                android:textStyle="bold"
                android:textSize="13dp"
                android:layout_margin="5dp"/>
            <TextView
                android:id="@+id/daerah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daerah"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:layout_margin="5dp"/>
            <TextView
                android:id="@+id/descDaerah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/indonesia"
                android:textColor="#545454"
                android:textSize="10dp"
                android:layout_marginLeft="5dp"
                />
            <TextView
                android:id="@+id/bahasa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bahasa_sistem"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:layout_margin="5dp"
                android:layout_marginBottom="0dp"/>
            <TextView
                android:id="@+id/descBahasa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/indonesia"
                android:textColor="#545454"
                android:textSize="10dp"
                android:layout_marginLeft="5dp"/>
            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="?android:attr/listDivider"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/pemberitahuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pemberitahuan"
                android:textColor="#0D3F41"
                android:textStyle="bold"
                android:textSize="13dp"
                android:layout_margin="5dp"/>
            <TextView
                android:id="@+id/pengingat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pengingat"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:layout_margin="5dp"/>
            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="?android:attr/listDivider"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/keluar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keluar"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:layout_margin="5dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>